# arboreal-jump-number-algorithms

./: .clang-format  .gitignore  LICENSE  README.md  create_mps.sh  main.cpp  meson.build  run_all.sh
base/: README.md  instance.cpp  instance.h  properties.h  solution.h
config/: br17.10.sop.ajn.txt.json  br17.12.sop.ajn.txt.json  esc07.sop.ajn.txt.json  esc11.sop.ajn.txt.json  esc12.sop.ajn.txt.json  esc25.sop.ajn.txt.json  esc47.sop.ajn.txt.json  esc63.sop.ajn.txt.json  esc78.sop.ajn.txt.json  ft53.1.sop.ajn.txt.json  ft53.2.sop.ajn.txt.json  ft53.3.sop.ajn.txt.json  ft53.4.sop.ajn.txt.json  ft70.1.sop.ajn.txt.json  ft70.2.sop.ajn.txt.json  ft70.3.sop.ajn.txt.json  ft70.4.sop.ajn.txt.json  generate_configurations.cpp  kro124p.1.sop.ajn.txt.json  kro124p.2.sop.ajn.txt.json  kro124p.3.sop.ajn.txt.json  kro124p.4.sop.ajn.txt.json  p43.1.sop.ajn.txt.json  p43.2.sop.ajn.txt.json  p43.3.sop.ajn.txt.json  p43.4.sop.ajn.txt.json  prob.100.sop.ajn.txt.json  prob.42.sop.ajn.txt.json  rbg048a.sop.ajn.txt.json  rbg050c.sop.ajn.txt.json  rbg109a.sop.ajn.txt.json  rbg150a.sop.ajn.txt.json  rbg174a.sop.ajn.txt.json  rbg253a.sop.ajn.txt.json  rbg323a.sop.ajn.txt.json  rbg341a.sop.ajn.txt.json  rbg358a.sop.ajn.txt.json  rbg378a.sop.ajn.txt.json  ry48p.1.sop.ajn.txt.json  ry48p.2.sop.ajn.txt.json  (+4 more)
docs/: copilot_model.txt
heuristic/: minimal_extension.cpp  minimal_extension.h
lp/: gurobi_lp_solver.py
optimizer/: characterization.cpp  characterization.h  exponential.cpp  exponential.h  feasibility_characterization.cpp  feasibility_characterization.h  iterative.cpp  iterative.h  multiflow.cpp  multiflow.h  optimizer.cpp  optimizer.h  optimizer_creator.cpp  optimizer_creator.h
output/: metrics.h  solution.cpp  solution.h
preprocessing/: instance_generator.cpp  instance_generator.h  reader.cpp  reader.h
solver/: BCSolver.cpp  BCSolver.h  CharacterizationBasedSolver.h  DDLSolver.cpp  DDLSolver.h  Kernel.cpp  Kernel.h  ddl_model.cpp  ddl_model.h  solver.cpp  solver.h  solver_creator.cpp  solver_creator.hpp
solver/callbacks/: add_min_cuts_lc.h  add_min_cuts_uc.h  pi_inequality.h  pi_sigma_inequality.h  precedence_inequality.h  reachability.h  sigma_inequality.h
solver/old/: CharacterizationBasedFormulation.cpp  CharacterizationBasedFormulation.h  MFSolver.cpp  MFSolver.h  model.cpp  model.h  multi_flow_model.cpp  multi_flow_model.h
utils/: const.h  generate_config_files.h  preprocessing.h  validation.h
